# FastCore

./: README.md  REFERENCE.md  ROADMAP.md  compile.bat  pom.xml  run-demo.bat
.github/workflows/: release.yml
docs/: COMPILE.md
examples/00-basic-usage/: pom.xml
examples/00-basic-usage/src/main/java/fastcore/: Demo.java
examples/Demo/: pom.xml
examples/Demo/src/main/java/fastcore/: Demo.java
native/: CMakeLists.txt
native/include/: fastcore.h
native/src/: fastcore.cpp  index.cpp  search.cpp  watch.cpp
release/: GITHUB_RELEASE_v0.1.0.md  YOUTUBE_SCRIPT.md  v0.1.0.md
src/main/java/fastcore/: FastCore.java  LibraryLoader.java  Platform.java
